--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,18 @@
 		}
 	],
 	"autoload": {
-		"psr-0": {
+		"psr-4": {
 			"Syzygy\\DevBundle\\": "src/"
 		}
 	},
-	"minimum-stability": "stable",
 	"require": {
 		"php": ">=5.3.2",
-		"symfony/framework-bundle": "2.*",
-		"doctrine/orm": "2.*",
-		"doctrine/doctrine-bundle": "1.*"
+		"symfony/symfony": "~2.3",
+		"symfony/monolog-bundle": "~2.0",
+		"doctrine/orm": "~2.0",
+		"doctrine/doctrine-bundle": "~1.2"
+	},
+	"require-dev": {
+		"phpunit/phpunit": ">=4"
 	}
 }
