--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -7,13 +7,13 @@ parameters:
     - ["~^\h+$~", ""] # truncate empty lines
     - ["~^}$~", "}\n"] # add newline at the end of file
   translator.class:
-    Syzygy\DevBundle\Component\Translation\RegisteringTranslator
+    "Syzygy\DevBundle\Component\Translation\RegisteringTranslator"
 
 services:
   syzygy.translator.registeringStub:
-    class: Syzygy\DevBundle\Component\Translation\RegisteringTranslatorStub
+    class: "Syzygy\DevBundle\Component\Translation\RegisteringTranslatorStub"
     arguments:
-      - @translator.default
-      - @logger
+      - "@translator.default"
+      - "@logger"
   translator:
-    alias: syzygy.translator.registeringStub
+    alias: "syzygy.translator.registeringStub"
